// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignNode campaign without description 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": null,
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-success text-uppercase w-100"
    >
      Open
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="text-muted test-campaign-namespace-link"
          to="/users/alice/campaigns"
        >
          <a
            className="text-muted test-campaign-namespace-link"
            href="/users/alice/campaigns"
          >
            alice
          </a>
        </AnchorLink>
        <span
          className="text-muted d-inline-block mx-1"
        >
          /
        </span>
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate text-muted font-italic"
      dangerousInnerHTML="No description"
      history="[History]"
    >
      <div
        className="text-truncate text-muted font-italic markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "No description",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode closed campaign 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": "2019-12-04T23:19:01Z",
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-danger text-uppercase w-100"
    >
      Closed
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="text-muted test-campaign-namespace-link"
          to="/users/alice/campaigns"
        >
          <a
            className="text-muted test-campaign-namespace-link"
            href="/users/alice/campaigns"
          >
            alice
          </a>
        </AnchorLink>
        <span
          className="text-muted d-inline-block mx-1"
        >
          /
        </span>
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode open campaign 1`] = `
<CampaignNode
  displayNamespace={true}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-success text-uppercase w-100"
    >
      Open
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="text-muted test-campaign-namespace-link"
          to="/users/alice/campaigns"
        >
          <a
            className="text-muted test-campaign-namespace-link"
            href="/users/alice/campaigns"
          >
            alice
          </a>
        </AnchorLink>
        <span
          className="text-muted d-inline-block mx-1"
        >
          /
        </span>
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;

exports[`CampaignNode open campaign on user page 1`] = `
<CampaignNode
  displayNamespace={false}
  history="[History]"
  node={
    Object {
      "changesets": Object {
        "stats": Object {
          "closed": 3,
          "merged": 0,
          "open": 1,
        },
      },
      "closedAt": null,
      "createdAt": "2019-12-04T23:15:01Z",
      "description": "
# Removes lodash

- and renders in markdown
        ",
      "id": "123",
      "name": "Upgrade lodash to v4",
      "namespace": Object {
        "namespaceName": "alice",
        "url": "/users/alice",
      },
      "url": "/users/alice/campaigns/123",
    }
  }
  now={2019-01-01T23:15:01.000Z}
>
  <span
    className="campaign-node__separator"
  />
  <h2
    className="m-0 campaign-node__badge"
  >
    <span
      className="badge badge-success text-uppercase w-100"
    >
      Open
    </span>
  </h2>
  <div
    className="campaign-node__content"
  >
    <div
      className="m-0 d-flex align-items-baseline"
    >
      <h3
        className="m-0 d-inline-block"
      >
        <AnchorLink
          className="test-campaign-link"
          to="/users/alice/campaigns/123"
        >
          <a
            className="test-campaign-link"
            href="/users/alice/campaigns/123"
          >
            Upgrade lodash to v4
          </a>
        </AnchorLink>
      </h3>
      <small
        className="ml-2 text-muted"
      >
        created
         
        <span
          data-tooltip={
            <Timestamp
              date="2019-12-04T23:15:01Z"
            />
          }
        >
          11 months
           ago
        </span>
      </small>
    </div>
    <Markdown
      className="text-truncate"
      dangerousInnerHTML="Removes lodash

and renders in markdown

"
      history="[History]"
    >
      <div
        className="text-truncate markdown"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Removes lodash

and renders in markdown

",
          }
        }
        onClick={[Function]}
      />
    </Markdown>
  </div>
  <ChangesetStatusOpen
    label={
      <span
        className="text-muted"
      >
        1
         open
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-success"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        1
         open
      </span>
    </div>
  </ChangesetStatusOpen>
  <ChangesetStatusClosed
    label={
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-danger"
    >
      <Memo(SourcePullIcon) />
      <span
        className="text-muted"
      >
        3
         closed
      </span>
    </div>
  </ChangesetStatusClosed>
  <ChangesetStatusMerged
    label={
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    }
  >
    <div
      className="m-0 text-nowrap d-flex flex-column align-items-center justify-content-center text-merged"
    >
      <Memo(SourceMergeIcon) />
      <span
        className="text-muted"
      >
        0
         merged
      </span>
    </div>
  </ChangesetStatusMerged>
</CampaignNode>
`;
